--- a/github/workflow/deploy.yml
+++ b/github/workflow/deploy.yml
@@ -1,4 +1,4 @@
-name : "DEPLOY BOOTCAMP CODIGO FACILITO"
+name: "DEPLOY BOOTCAMP CODIGO FACILITO"
 on:
   push:
     branches: ["main"]
@@ -7,9 +7,9 @@ jobs:
   deploy-bootcamp:
     runs-on: ubuntu-latest
     steps:
-      run: echo "Hacemos pull del codigo"
-      run: echo "Instalamos dependencias"
-      run: echo "Compilamos el codigo"
-      run: echo "Hacemos deploy del codigo"
-      run: echo "Notificamos a los usuarios"
-      run: echo "Fin del proceso de deploy"
+      - run: echo "Hacemos pull del codigo"
+      - run: echo "Instalamos dependencias"
+      - run: echo "Compilamos el codigo"
+      - run: echo "Hacemos deploy del codigo"
+      - run: echo "Notificamos a los usuarios"
+      - run: echo "Fin del proceso de deploy" 
