--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,20 @@
-name: "DEPLOY BOOTCAMP CODIGO FACILITO"
+name: Deploy to server
 on:
   push:
     branches: ["main"]
-  
 jobs:
-  deploy-bootcamp:
+  first-job:
+  runs-on: ubuntu-latest
+  
+  steps:
+    - name: Hola mundo
+      run: echo "Hola mundo"
+  
+  second-job:
     runs-on: ubuntu-latest
+    needs: first-job
+
     steps:
-      - run: echo "Hacemos pull del codigo"
-      - run: echo "Instalamos dependencias"
-      - run: echo "Compilamos el codigo"
-      - run: echo "Hacemos deploy del codigo"
-      - run: echo "Notificamos a los usuarios"
-      - run: echo "Fin del proceso de deploy" 
+      - name: Hola mundo 2
+        run: echo "Hola mundo 2"
+
