add if and context

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
         run: echo "Hola mundo"
   
   second-job:
-    if: ${{ github.ref == 'refs/heads/main' && }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: first-job
 
