--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
     env:
       NAME: "CODIGO FACILITO"
 
+    outputs:
+      salida: ${{ steps.step_1.outputs.my_variable }}
+
     steps:
       - name: Hola mundo
         run: echo "Hola mundo $NAME"
@@ -33,3 +36,18 @@ jobs:
       - name: Hola mundo 2
         run: echo "Hola mundo 2"
 
+  third-job: 
+    runs-on: ubuntu-latest
+    needs: [first-job, second-job]
+
+    steps:
+      - name: Generar archivo
+        run: |
+          echo "Generando archivo"
+          echo "Este es un archivo generado por el tercer job" > test.log
+      
+      - name: Subir artefacto
+        uses: actions/upload-artifact@v2
+        with:
+          name: archivo-artifact
+          path: test.log
