--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,3 +51,16 @@ jobs:
         with:
           name: archivo-artifact
           path: test.log
+  
+  fourth-job:
+    runs-on: ubuntu-latest
+    needs: third-job
+
+    steps:
+      - name: Descargar artefacto
+        uses: actions/download-artifact@v2
+        with:
+          name: archivo-artifact
+      
+      - name: Mostrar contenido del archivo
+        run: cat test.log
