--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
 
   third-job: 
     runs-on: ubuntu-latest
-    needs: [first-job, second-job]
+    needs: second-job
 
     steps:
       - name: Generar archivo
@@ -47,7 +47,7 @@ jobs:
           echo "Este es un archivo generado por el tercer job" >> test.log
       
       - name: Subir artefacto
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: archivo-artifact
           path: test.log
@@ -58,7 +58,7 @@ jobs:
 
     steps:
       - name: Descargar artefacto
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: archivo-artifact
       
